--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/MozillaFoundation/mofobook/issues"
   },
-  "homepage": "https://github.com/MozillaFoundation/mofobook"
+  "homepage": "https://github.com/MozillaFoundation/mofobook",
+  "dependencies": {
+    "gitbook-theme-webmaker": "0.0.1"
+  }
 }
