--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
 language: node_js
 install: npm install git+https://github.com/davidascher/gitbook.git#webmaker-styling
-# usually, just:
-# install: npm install gitbook
 before_script: gitbook install
 node_js:
 - '0.10'
-
 script: gitbook build
 deploy:
   provider: s3
   access_key_id: AKIAJ643ITA2WHMEIC7A
   secret_access_key:
-    secure: "EYlP2zBT4srDusqjJ4PBFxWQnvIPy1cPLDKMAoAloY/Ys14/dFM3awWxZJ8vqPsVBbCNc5uDVrLZEkQiCi4du615J9WW5ZY+symxGW0gRwK8mUZqZSXA4AohsWByM6K4uCFPT5VrgIId/CBdJwHyuIpQrREbkP4MTb7hq1jdflc="
-  bucket: "book.webmaker.org"
+    secure: YAsUEHoOlPW9KlQRKYqaW/bjBGJF58udYNOekdEz9uvT2usU9d9fgB+pJA/m7hHXeAqUTk3U+Br2iLBN2Y5RoGey+oBy+cN6KgSHeChR1a7+iBvGA+JeA/sMpVYYbcMSJMk0wIrbsINgxcgXM0ws79ZQO9Vspiv5InSBc/oFO8Y=
+  bucket: book.webmaker.org
   acl: public_read
   skip_cleanup: true
-  endpoint: "book.webmaker.org.s3-website-us-east-1.amazonaws.com"
-  local_dir: "_book"
-
-
+  endpoint: book.webmaker.org.s3-website-us-east-1.amazonaws.com
+  local_dir: _book
